--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "fast-csv": "^2.4.1",
+    "fili": "^2.0.0",
     "plotly": "^1.0.6"
   }
 }
